src/objects/loan__Disbursal_Adjustment__c.object
<CustomObject>
    <description>Disbursal Transaction Adjustment</description>
    <fields>
        <fullName>loan__Adjustment_Txn_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <description>Adjustment Txn Date</description>
        <inlineHelpText>Adjustment Txn Date</inlineHelpText>
        <label>Adjustment Txn Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
        <description>Loan Disbursal Transaction</description>
        <inlineHelpText>Loan Disbursal Transaction</inlineHelpText>
        <label>Loan Disbursal Transaction</label>
        <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipName>Disbursal_Transaction_Adjustment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Receipt_ID__c</fullName>
        <displayFormat>DARID-{0000000000}</displayFormat>
        <label>Receipt ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <label>Disbursal Transaction Reversal</label>
    <nameField>
        <displayFormat>DAI-{0000000000}</displayFormat>
        <label>Disbursal Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Transaction Reversal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Check_Existing_Reversal_Txn</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; loan__Loan_Disbursal_Transaction__r.loan__Cleared_Reversal_Txn_Count__c &gt; 0</errorConditionFormula>
        <errorMessage>This disbursal transaction has already been reversed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Transaction_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Adjustment_Txn_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Transaction date cannot be greater than calendar date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Validate_Txn_Date_Against_System_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.loan__Current_System_Date__c != null,
$User.loan__Current_System_Date__c !=  loan__Adjustment_Txn_Date__c  )</errorConditionFormula>
        <errorMessage>Transaction Date must be the same as system date.</errorMessage>
    </validationRules>
</CustomObject>